--- a/layouts/index.html
+++ b/layouts/index.html
@@ -84,10 +84,11 @@
 
     <!-- Photo -->
     <div class="flex justify-center">
-      <img src="/images/portrait.png"
-           alt="Josue Elnathan"
-           class="w-90 rounded-2xl shadow-xl">
-    </div>
+  <img src="{{ "images/portrait.png" | relURL }}"
+       alt="Josue Elnathan"
+       class="w-90 rounded-2xl shadow-xl">
+</div>
+
 
     <!-- Text -->
     <div>
@@ -275,9 +276,10 @@
     <!-- LEFT SIDE (PHOTO + INFO) -->
     <div class="text-center md:text-left">
 
-      <img src="/images/jem.jpg"
-           alt="Josue Elnathan"
-           class="w-78 mx-auto md:mx-0 rounded-2xl shadow-2xl border border-gray-700 mb-8">
+      <img src="{{ "images/jem.jpg" | relURL }}"
+     alt="Josue Elnathan"
+     class="w-[320px] mx-auto md:mx-0 rounded-2xl shadow-2xl border border-gray-700 mb-8">
+
 
       <h2 class="text-3xl font-bold mb-4">
         Let's Work Together
