--- a/layouts/index.html
+++ b/layouts/index.html
@@ -108,7 +108,7 @@
         and support strategic business decisions.
       </p>
 
-      <a href="#"
+      <a href="https://drive.google.com/file/d/1awJtdZUjSYuJ0b4Fd5Ft25yrgM2mxxAA/view?usp=sharing"
          class="inline-block px-6 py-3 bg-blue-600 text-white rounded-lg shadow-md hover:bg-blue-700 transition">
         Download CV
       </a>
