--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -28,11 +28,11 @@
 
       <!-- Desktop Menu -->
       <div class="hidden md:flex space-x-8 text-gray-600 font-medium">
-        <a href="#about" class="hover:text-blue-600 transition">About</a>
-        <a href="#skills" class="hover:text-blue-600 transition">Skills</a>
-        <a href="#projects" class="hover:text-blue-600 transition">Projects</a>
-        <a href="#contact" class="hover:text-blue-600 transition">Contact</a>
-        <a href="#contact" class="hover:text-blue-600 transition">blog</a>
+        <a href="/#about" class="hover:text-blue-600 transition">About</a>
+        <a href="/#skills" class="hover:text-blue-600 transition">Skills</a>
+        <a href="/#projects" class="hover:text-blue-600 transition">Projects</a>
+        <a href="/#contact" class="hover:text-blue-600 transition">Contact</a>
+        <a href="/blog/" class="hover:text-blue-600 transition">Blog</a>
       </div>
 
       <!-- Mobile Button -->
@@ -45,11 +45,11 @@
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="hidden md:hidden bg-white border-t">
       <div class="flex flex-col space-y-4 px-6 py-6 text-gray-600 font-medium">
-        <a href="#about" class="hover:text-blue-600">About</a>
-        <a href="#skills" class="hover:text-blue-600">Skills</a>
-        <a href="#projects" class="hover:text-blue-600">Projects</a>
-        <a href="#contact" class="hover:text-blue-600">Contact</a>
-        <a href="#blog" class="hover:text-blue-600">Blog</a>
+        <a href="/#about" class="hover:text-blue-600">About</a>
+        <a href="/#skills" class="hover:text-blue-600">Skills</a>
+        <a href="/#projects" class="hover:text-blue-600">Projects</a>
+        <a href="/#contact" class="hover:text-blue-600">Contact</a>
+        <a href="/blog/" class="hover:text-blue-600">Blog</a>
       </div>
     </div>
   </nav>
@@ -97,7 +97,7 @@
 
     <!-- Copyright -->
     <p class="text-sm text-gray-500">
-      © <span id="year"></span> Josue Elnathan Mbondo. All rights reserved.
+      Â© <span id="year"></span> Josue Elnathan Mbondo. All rights reserved.
     </p>
 
   </div>
@@ -110,3 +110,4 @@
 </script>
 
 </html>
+
