--- a/layouts/index.html
+++ b/layouts/index.html
@@ -110,7 +110,8 @@
 
       <a href="https://drive.google.com/file/d/1awJtdZUjSYuJ0b4Fd5Ft25yrgM2mxxAA/view?usp=sharing"
          class="inline-block px-6 py-3 bg-blue-600 text-white rounded-lg shadow-md hover:bg-blue-700 transition">
-        Download CV
+        <i class="fa-solid fa-eye mr-2"></i>
+        My CV
       </a>
 
     </div>
@@ -211,15 +212,14 @@
                   hover:border-blue-500 transition duration-300 group">
 
         <h3 class="text-xl font-semibold mb-3 group-hover:text-blue-500 transition">
-          Sales Data Analysis
+          Financial Risk Analytics Dashboard
         </h3>
 
         <p class="text-gray-400 mb-6">
-          Exploratory data analysis identifying sales trends, performance metrics,
-          and actionable business insights.
+         This project is a comprehensive Financial Risk Assessment platform designed to provide real-time insights into market volatility and credit exposure. By combining the interactive capabilities of React with the deep analytical power of Power BI, the application transforms complex financial datasets into actionable intelligence.
         </p>
 
-        <a href="#" class="text-blue-500 hover:underline">
+        <a href="https://next-douane-ckuizvzcb-elnathan9414s-projects.vercel.app/" class="text-blue-500 hover:underline">
           View Project →
         </a>
       </div>
@@ -233,8 +233,9 @@
         </h3>
 
         <p class="text-gray-400 mb-6">
-          Improved system reliability and performance through structured
-          monitoring and troubleshooting processes.
+          This project focused on modernizing a legacy server environment to enhance scalability,
+           security, and cost-efficiency. By transitioning from a fragmented on-premise setup to a streamlined Hybrid Cloud architecture, the objective was to eliminate hardware redundancies
+           and automate resource management to support growing business demands.
         </p>
 
         <a href="#" class="text-blue-500 hover:underline">
@@ -247,15 +248,16 @@
                   hover:border-blue-500 transition duration-300 group">
 
         <h3 class="text-xl font-semibold mb-3 group-hover:text-blue-500 transition">
-          Dashboard Development
+          TCF Preparation Platform (French Language Proficiency)
         </h3>
 
         <p class="text-gray-400 mb-6">
-          Built interactive dashboards using Excel and Power BI
-          to support strategic decision-making.
+          This project is a comprehensive e-learning management system (LMS) specifically designed 
+          to help students prepare for the TCF (Test de Connaissance du Français). Built with Laravel, the platform simulates the real exam environment, 
+          providing timed practice tests, automated scoring, and progress tracking
         </p>
 
-        <a href="#" class="text-blue-500 hover:underline">
+        <a href="https://tcfapp-main-xvfoyp.laravel.cloud/" class="text-blue-500 hover:underline">
           View Project →
         </a>
       </div>
@@ -328,7 +330,8 @@
         </div>
 
         <button type="submit"
-                class="w-full px-6 py-3 bg-blue-600 hover:bg-blue-700 rounded-lg shadow-lg transition">
+                class="w-full px-6 py-3 bg-blue-600 hover:bg-blue-700 rounded-lg shadow-lg transition flex items-center justify-center">
+         
           Send Message
         </button>
 
